# Flake8-pyproject

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  PyPI.md  ReadMe.md  license.txt  pyproject.toml
.github/workflows/: commit.yml  coverage.yml  flake8.yml  publish.yml  report_coverage.yml  scheduled.yml  test_commit.yml
flake8p/: __init__.py  __main__.py  hook.py  meta.py  plugin.py  util.py
pyflake8/: __init__.py  __main__.py  hook.py  meta.py
tests/: ReadMe.md  test_integration.py
tests/fixtures/config_custom_file/: flake8.toml  module.py
tests/fixtures/config_flake8/: .flake8
tests/fixtures/config_mixed/: .flake8  pyproject.toml  setup.cfg  tox.ini
tests/fixtures/config_tox/: tox.ini
tests/fixtures/empty_tool_section/: pyproject.toml
tools/: ReadMe.md  build_wheel.py  clean_repo.py  coverage.py  measure_coverage.py  publish_wheel.py  release.md  run_tests.py
