# Project information: PyPI and Pip

[project]
name = 'pyFlake8'
authors = [{name='John Hennig'}]
license = {file='license.txt'}
keywords = ['Flake8', 'pyproject.toml']
classifiers = [
    'Development Status :: 4 - Beta',
    'Programming Language :: Python',
    'Topic :: Software Development :: Quality Assurance',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'Framework :: Flake8',
    'License :: OSI Approved :: MIT License',
]
readme = 'PyPI.md'
requires-python = '>=3.7'
dependencies = ['Flake8', 'TOMLi']
dynamic = ['version', 'description']

[project.scripts]
pyflake8 = 'pyflake8:main'

[project.optional-dependencies]
test = ['pyTest', 'pyTest-cov']

[project.urls]
Source = 'https://github.com/john-hen/pyFlake8'


# Wheel builder: Flit

[build-system]
requires = ['flit_core>=3.4,<4']
build-backend = 'flit_core.buildapi'

[tool.flit.module]
name = 'pyflake8'


# Code linter: Flake8

[tool.flake8]
exclude = ['tests/fixtures', 'local', 'ignore']
ignore = [
    'E221',        # Multiple spaces before operator.
    'E226',        # Missing whitespace around arithmetic operator.
]
per-file-ignores = ['__init__.py:F401']


# Test runner: pyTest

[tool.pytest.ini_options]
addopts = '--verbose'
testpaths = ['tests']


# Code coverage: Coverage.py

[tool.coverage.run]
source = ['pyflake8']
