# Project information: PyPI and Pip

[project]
name = 'Flake8-pyproject'
authors = [{name='John Hennig'}]
license = {file='license.txt'}
keywords = ['Flake8', 'pyproject.toml']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Programming Language :: Python',
    'Topic :: Software Development :: Quality Assurance',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'Framework :: Flake8',
    'License :: OSI Approved :: MIT License',
]
readme = 'PyPI.md'
dynamic = ['version', 'description']
requires-python = '>= 3.6'
dependencies = [
    'Flake8 >= 5',
    'TOMLi; python_version < "3.11"',
    'TOMLi < 2; python_version < "3.7"',
]

[project.optional-dependencies]
dev = [
    'pyTest',
    'pyTest-cov',
]

[project.scripts]
flake8p = 'flake8p:main'

[project.entry-points.'flake8.report']
Flake8-pyproject = 'flake8p:Plugin'

[project.urls]
Source = 'https://github.com/john-hen/Flake8-pyproject'


# Wheel builder: Flit

[build-system]
requires = ['flit_core >= 3.4']
build-backend = 'flit_core.buildapi'

[tool.flit.module]
name = 'flake8p'


# Code linter: Flake8

[tool.flake8]
exclude = ['tests/fixtures', 'local', 'ignore']
ignore = [
    'E221',                  # Multiple spaces before operator.
    'E226',                  # Missing whitespace around arithmetic operator.
]
per-file-ignores = [
    '__init__.py:F401',      # Module imported but unused.
]


# Test runner: pyTest

[tool.pytest.ini_options]
addopts = '--verbose'
testpaths = ['tests']


# Code coverage: Coverage.py

[tool.coverage.run]
source = ['flake8p']
